# softmax-cli

./: pyproject.toml
src/softmax/: __init__.py  auth.py  cli.py  cogames.py  perform_login.py  token_storage.py
tests/: test_auth_login.py  test_cli_plugins.py  test_python_api.py
